@@ -5,6 +5,7 @@ import it.pagopa.selfcare.pagopa.backoffice.TestUtil;
 import it.pagopa.selfcare.pagopa.backoffice.client.AuthorizerConfigClient;
 import it.pagopa.selfcare.pagopa.backoffice.client.AzureApiManagerClient;
 import it.pagopa.selfcare.pagopa.backoffice.client.ExternalApiClient;
+import it.pagopa.selfcare.pagopa.backoffice.component.ApiManagementComponent;
 import it.pagopa.selfcare.pagopa.backoffice.config.MappingsConfiguration;
 import it.pagopa.selfcare.pagopa.backoffice.model.authorization.Authorization;
 import it.pagopa.selfcare.pagopa.backoffice.model.institutions.*;
@@ -12,10 +13,14 @@ import it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institutio
 import it.pagopa.selfcare.pagopa.backoffice.model.institutions.InstitutionApiKeysResource;
 import it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.InstitutionInfo;
 import it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institutions;
+import it.pagopa.selfcare.pagopa.backoffice.model.users.client.UserInstitution;
+import lombok.SneakyThrows;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.boot.test.mock.mockito.SpyBean;
+import org.springframework.web.bind.annotation.RequestParam;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -40,6 +45,9 @@ class ApiManagementServiceTest {
     @MockBean
     private ExternalApiClient externalApiClient;
 
+    @SpyBean
+    private ApiManagementComponent apiManagementComponent;
+
     @MockBean
     private FeatureManager featureManager;
 
@@ -51,20 +59,20 @@ class ApiManagementServiceTest {
 
     @Test
     void getInstitutions() {
-        when(externalApiClient.getInstitutions(any()))
-                .thenReturn(Collections.singletonList(InstitutionInfo.builder()
-                        .userProductRoles(List.of("admin"))
-                        .build()));
-        InstitutionDetailResource institutions = service.getInstitutions(null);
+        when(externalApiClient.getUserInstitution(any(), any(), any(), any(), any(), any(), any()))
+                .thenReturn(Collections.singletonList(UserInstitution.builder()
+                        .institutionId("test").institutionDescription("test").build()));
+        InstitutionBaseResources institutions = service.getInstitutions(null);
         assertNotNull(institutions);
-        assertNotNull(institutions.getInstitutionDetails());
-        assertFalse(institutions.getInstitutionDetails().isEmpty());
-        verify(externalApiClient).getInstitutions(any());
+        assertNotNull(institutions.getInstitutions());
+        assertFalse(institutions.getInstitutions().isEmpty());
+        verify(externalApiClient).getUserInstitution(any(), any(), any(), any(), any(), any(), any());
     }
 
     @Test
     void getInstitutionsFilteredByName() {
-        it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution elem = it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.builder()
+        it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution elem =
+                it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.builder()
                 .id("1")
                 .institutionType("PA")
                 .build();
@@ -74,10 +82,10 @@ class ApiManagementServiceTest {
         when(externalApiClient.getInstitutionsFiltered(any()))
                 .thenReturn(body);
         when(featureManager.isEnabled(anyString())).thenReturn(true);
-        InstitutionDetailResource institutions = service.getInstitutions("123BCS");
+        InstitutionBaseResources institutions = service.getInstitutions("123BCS");
         assertNotNull(institutions);
-        assertNotNull(institutions.getInstitutionDetails());
-        assertFalse(institutions.getInstitutionDetails().isEmpty());
+        assertNotNull(institutions.getInstitutions());
+        assertFalse(institutions.getInstitutions().isEmpty());
         verify(externalApiClient, never()).getInstitutions(any());
     }
 
@@ -85,10 +93,21 @@ class ApiManagementServiceTest {
     void getInstitution() throws IOException {
         when(externalApiClient.getInstitution(any()))
                 .thenReturn(TestUtil.fileToObject(
-                        "response/externalapi/institution_response.json", InstitutionResponse.class));
+                        "response/externalapi/institution_response.json",
+                        it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.class));
         Institution institution = service.getInstitution(INSTITUTION_ID);
         assertNotNull(institution);
         verify(externalApiClient).getInstitution(any());
+    }
+
+    @SneakyThrows
+    @Test
+    void getInstitutionFullDetail() {
+        when(externalApiClient.getInstitution(any())).thenReturn(TestUtil.fileToObject(
+                "response/externalapi/institution_response.json",
+                it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.class));
+        InstitutionDetail institutionDetail = service.getInstitutionFullDetail(any());
+        assertNotNull(institutionDetail);
     }
 
     @Test
@@ -145,7 +164,8 @@ class ApiManagementServiceTest {
     void createSubscriptionKeys() throws IOException {
         when(externalApiClient.getInstitution(any()))
                 .thenReturn(TestUtil.fileToObject(
-                        "response/externalapi/institution_response.json", InstitutionResponse.class));
+                        "response/externalapi/institution_response.json",
+                        it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.class));
         when(apimClient.getApiSubscriptions(any())).thenReturn(Collections.singletonList(new InstitutionApiKeys()));
 
         InstitutionApiKeysResource institutionApiKeys = service.createSubscriptionKeys(INSTITUTION_ID, Subscription.BIZ);
@@ -166,7 +186,8 @@ class ApiManagementServiceTest {
         when(apimClient.getInstitution(INSTITUTION_ID)).thenThrow(IllegalArgumentException.class);
         when(externalApiClient.getInstitution(any()))
                 .thenReturn(TestUtil.fileToObject(
-                        "response/externalapi/institution_response.json", InstitutionResponse.class));
+                        "response/externalapi/institution_response.json",
+                        it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.class));
         when(apimClient.getApiSubscriptions(any())).thenReturn(Collections.singletonList(new InstitutionApiKeys()));
 
         InstitutionApiKeysResource institutionApiKeys = service.createSubscriptionKeys(INSTITUTION_ID, Subscription.BIZ);
@@ -184,8 +205,9 @@ class ApiManagementServiceTest {
 
     @Test
     void createSubscriptionKeysForBOExtEC() throws IOException {
-        InstitutionResponse institutionResponse = TestUtil.fileToObject(
-                "response/externalapi/institution_response.json", InstitutionResponse.class);
+        it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution institutionResponse = TestUtil.fileToObject(
+                "response/externalapi/institution_response.json",
+                it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.class);
         InstitutionApiKeys institutionApiKeys =
                 buildInstitutionApiKeys(String.format("%s%s", Subscription.BO_EXT_EC.getPrefixId(), institutionResponse.getTaxCode()));
 
@@ -207,8 +229,9 @@ class ApiManagementServiceTest {
 
     @Test
     void createSubscriptionKeysForFdrPsp() throws IOException {
-        InstitutionResponse institutionResponse = TestUtil.fileToObject(
-                "response/externalapi/institution_response.json", InstitutionResponse.class);
+        it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution institutionResponse = TestUtil.fileToObject(
+                "response/externalapi/institution_response.json",
+                it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.class);
         InstitutionApiKeys institutionApiKeys =
                 buildInstitutionApiKeys(String.format("%s%s", Subscription.FDR_PSP.getPrefixId(), institutionResponse.getTaxCode()));
 
@@ -240,8 +263,9 @@ class ApiManagementServiceTest {
 
     @Test
     void regeneratePrimaryKeyForBOExtEC() throws IOException {
-        InstitutionResponse institutionResponse = TestUtil.fileToObject(
-                "response/externalapi/institution_response.json", InstitutionResponse.class);
+        it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution institutionResponse = TestUtil.fileToObject(
+                "response/externalapi/institution_response.json",
+                it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.class);
         String subscriptionId = String.format("%s%s", Subscription.BO_EXT_EC.getPrefixId(), institutionResponse.getTaxCode());
         InstitutionApiKeys institutionApiKeys = buildInstitutionApiKeys(subscriptionId);
 
@@ -259,8 +283,9 @@ class ApiManagementServiceTest {
 
     @Test
     void regeneratePrimaryKeyForBOExtPSP() throws IOException {
-        InstitutionResponse institutionResponse = TestUtil.fileToObject(
-                "response/externalapi/institution_response.json", InstitutionResponse.class);
+        it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution institutionResponse = TestUtil.fileToObject(
+                "response/externalapi/institution_response.json",
+                it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.class);
         String subscriptionId = String.format("%s%s", Subscription.BO_EXT_PSP.getPrefixId(), institutionResponse.getTaxCode());
         InstitutionApiKeys institutionApiKeys = buildInstitutionApiKeys(subscriptionId);
 
@@ -288,8 +313,9 @@ class ApiManagementServiceTest {
 
     @Test
     void regenerateSecondaryKeyForBOExtEC() throws IOException {
-        InstitutionResponse institutionResponse = TestUtil.fileToObject(
-                "response/externalapi/institution_response.json", InstitutionResponse.class);
+        it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution institutionResponse = TestUtil.fileToObject(
+                "response/externalapi/institution_response.json",
+                it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.class);
         String subscriptionId = String.format("%s%s", Subscription.BO_EXT_EC.getPrefixId(), institutionResponse.getTaxCode());
         InstitutionApiKeys institutionApiKeys = buildInstitutionApiKeys(subscriptionId);
 
@@ -307,8 +333,9 @@ class ApiManagementServiceTest {
 
     @Test
     void regenerateSecondaryKeyForBOExtPSP() throws IOException {
-        InstitutionResponse institutionResponse = TestUtil.fileToObject(
-                "response/externalapi/institution_response.json", InstitutionResponse.class);
+        it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution institutionResponse = TestUtil.fileToObject(
+                "response/externalapi/institution_response.json",
+                it.pagopa.selfcare.pagopa.backoffice.model.institutions.client.Institution.class);
         String subscriptionId = String.format("%s%s", Subscription.BO_EXT_PSP.getPrefixId(), institutionResponse.getTaxCode());
         InstitutionApiKeys institutionApiKeys = buildInstitutionApiKeys(subscriptionId);
 
